--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           and making sure that you never get lost again!
         </p>
 
-        <p>If you need help on your journey, Join us on Discord.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, culpa est. Hic rem assumenda repellendus?</p>
 
         <div class="button-join">
           <a href="#">Join Us!</a>
@@ -67,7 +67,7 @@
               animi ea quasi harum aspernatur obcaecati numquam veritatis 
               dolores natus optio dignissimos inventore similique, ipsum.
             </p>
-            <a href="#" class="button-preset">Preset</a>
+            <a href="#" class="button-preset">Mystery</a>
           </div>
           <img src="#" alt="Samu's Ship" class="preset-img" />
         </div>
