added cow and soil sanity

--- a/mystery.html
+++ b/mystery.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.css">
     <link rel="stylesheet" href="mystery.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -29,55 +30,135 @@
     </header>
     <main class="main-container">
       <div class="mystery-container">
-        <section id="scoop-sanity" class="scoop-sanity">
-          <h2>SCOOP</h2>
-          <div class="bottle-list">
-            <img
-              class="item"
-              src="imgs/tracker-icons/scoops/water.png"
-              alt="Water"
-              draggable="true"
-            />
-            <img
-              class="item"
-              src="imgs/tracker-icons/scoops/hot-water.png"
-              alt="Hot Water"
-            />
-            <img class="item" src="imgs/tracker-icons/scoops/egg.png" alt="Zora Egg" />
-            <img class="item" src="imgs/tracker-icons/scoops/fish.png" alt="Fish" />
-            <img
-              class="item"
-              src="imgs/tracker-icons/scoops/fairy.png"
-              alt="Fairy"
-            />
-            <img
-              class="item"
-              src="imgs/tracker-icons/scoops/mushroom.png"
-              alt="Mushroom"
-            />
-            <img
-              class="item"
-              src="imgs/tracker-icons/scoops/princess.png"
-              alt="Deku Princess"
-            />
-            <img class="item" src="imgs/tracker-icons/scoops/poe.png" alt="Poe" />
-          </div>
-          <div class="bottle-drop-container">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
-          </div>
-        </section>
+        <div class="sanity-bundle-container">
+          <section id="scoop-sanity" class="scoop-sanity">
+            <h2>SCOOP</h2>
+            <div class="bottle-list">
+              <img
+                class="item"
+                src="imgs/tracker-icons/scoops/water.png"
+                alt="Water"
+                draggable="true"
+              />
+              <img
+                class="item"
+                src="imgs/tracker-icons/scoops/hot-water.png"
+                alt="Hot Water"
+              />
+              <img class="item" src="imgs/tracker-icons/scoops/egg.png" alt="Zora Egg" />
+              <img class="item" src="imgs/tracker-icons/scoops/fish.png" alt="Fish" />
+              <img
+                class="item"
+                src="imgs/tracker-icons/scoops/fairy.png"
+                alt="Fairy"
+              />
+              <img
+                class="item"
+                src="imgs/tracker-icons/scoops/mushroom.png"
+                alt="Mushroom"
+              />
+              <img
+                class="item"
+                src="imgs/tracker-icons/scoops/princess.png"
+                alt="Deku Princess"
+              />
+              <img class="item" src="imgs/tracker-icons/scoops/poe.png" alt="Poe" />
+            </div>
+            <div class="bottle-drop-container">
+              <div class="box"><img src="" alt=""></div>
+              <div class="box"></div>
+              <div class="box"></div>
+              <div class="box"></div>
+              <div class="box"></div>
+              <div class="box"></div>
+              <div class="box"></div>
+              <div class="box"></div>
+            </div>
+          </section>
+          <section id="cow-sanity" class="cow-sanity">
+            <h1>COWS</h1>
+            <ul class="cow-container">
+              <h2>Termina Field</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Romani Mask">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Romani Mask">
+              </div>
+            </ul>
+            <ul class="cow-container">
+              <h2>Ranch</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Romani Mask">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Romani Mask">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Romani Mask">
+              </div>
+            </ul>
+            <ul class="cow-container">
+              <h2>Great Bay Coast</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Romani Mask">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Romani Mask">
+              </div>
+            </ul>
+            <ul class="cow-container">
+              <h2>Well</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Romani Mask">
+              </div>
+            </ul>
+          </section>
+          <section id="soil-sanity" class="soil-sanity">
+            <h1>SOIL</h1>
+            <ul class="soil-container">
+              <h2>Termina Field</h2>
+              <div class="icon-container">
+                <img title="South Wall" src="imgs/tracker-icons/scoops/bug.png" alt="Bug">
+                <img src="imgs/tracker-icons/scoops/bug.png" alt="Bug">
+                <img src="imgs/tracker-icons/scoops/bug.png" alt="Bug">
+                <img src="imgs/tracker-icons/scoops/bug.png" alt="Bug">      
+              </div>
+            </ul>
+            <ul class="soil-container">
+              <h2>Ranch</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/scoops/bug.png" alt="Bug">
+                <img src="imgs/tracker-icons/scoops/bug.png" alt="Bug">
+                <img src="imgs/tracker-icons/scoops/bug.png" alt="Bug">
+              </div>
+            </ul>
+            <ul class="soil-container">
+              <h2>Swamp</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/scoops/bug.png" alt="Bug">
+                <img src="imgs/tracker-icons/scoops/bug.png" alt="Bug">
+                <img src="imgs/tracker-icons/scoops/bug.png" alt="Bug">
+              </div>
+            </ul>
+            <ul class="soil-container">
+              <h2>Stone Tower</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/scoops/bug.png" alt="Bug">
+                <img src="imgs/tracker-icons/scoops/bug.png" alt="Bug">
+              </div>
+            </ul>
+            <ul class="soil-container">
+              <h2>GBC</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/scoops/bug.png" alt="Bug">
+              </div>
+            </ul>
+            <ul class="soil-container">
+              <h2>Secret Shrine</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/scoops/bug.png" alt="Bug">
+              </div>
+            </ul>
+          </section>     
+        </div>
         <section id="shop-sanity" class="shop-sanity">
-          <div class="shop-late">
+          <div class="shop-late" style="display: grid">
             <div id="shop-title" class="shop-title">
               <h1>LATE SHOPS</h1>
-              <button class="swap-btn" ></button>
+              <button class="swap-btn" >FULL SHOPS</button>
             </div>
             <div id="wct-shop" class="wct-shop">
               <h2>WCT Shop</h2>
@@ -158,31 +239,11 @@
           </div>
           <div class="shop-full">
             <div id="shop-title" class="shop-title">
-              <h1>LATE SHOPS</h1>
-              <button class="swap-btn" ></button>
+              <button class="swap-btn" >LATE SHOPS</button>
+              <h1>FULL SHOPS</h1>
             </div>
-            <div id="wct-shop" class="wct-shop">
-              <h2>WCT Shop</h2>
-              <div class="box-container">
-                <div id="box-container" class="box"></div>
-                <input type="text" />
-              </div>
-              <div class="box-container">
-                <div id="box-container" class="box"></div>
-                <input type="text" />
-              </div>
-              <div class="box-container">
-                <div id="box-container" class="box"></div>
-                <input type="text" />
-              </div>
-              <div class="box-container">
-                <div id="box-container" class="box"></div>
-                <input type="text" />
-              </div>
-              <div class="box-container">
-                <div id="box-container" class="box"></div>
-                <input type="text" />
-              </div>
+            <div id="bomb-shop"  class="bomb-shop">
+              <h2>Bomb Shop</h2>
               <div class="box-container">
                 <div id="box-container" class="box"></div>
                 <input type="text" />
@@ -196,8 +257,8 @@
                 <input type="text" />
               </div>
             </div>
-            <div id="goron-shop"  class="goron-shop">
-              <h2>Goron Shop</h2>
+            <div id="kotake-shop" class="kotake-shop">
+              <h2>Kotake Shop</h2>
               <div class="box-container">
                 <div id="box-container" class="box"></div>
                 <input type="text" />
@@ -211,12 +272,8 @@
                 <input type="text" />
               </div>
             </div>
-            <div id="zora-shop" class="zora-shop">
-              <h2>Zora Shop</h2>
-              <div class="box-container">
-                <div id="box-container" class="box"></div>
-                <input type="text" />
-              </div>
+            <div id="scrub-shop" class="scrub-shop">
+              <h2>Scrub</h2>
               <div class="box-container">
                 <div id="box-container" class="box"></div>
                 <input type="text" />
@@ -226,16 +283,8 @@
                 <input type="text" />
               </div>
             </div>
-            <div id="milk-bar" class="milk-bar">
-              <h2>Milk Bar</h2>
-              <div class="box-container">
-                <div id="box-container" class="box"></div>
-                <input type="text" />
-              </div>
-              <div class="box-container">
-                <div id="box-container" class="box"></div>
-                <input type="text" />
-              </div>
+            <div class="Gorman-shop">
+              <h2>Gorman</h2>
               <div class="box-container">
                 <div id="box-container" class="box"></div>
                 <input type="text" />
@@ -245,27 +294,82 @@
           
         </section>
         <section id="notes-container" class="notes-container">
-          <div class="notes-box">
-            <ul class="to-do">
-              <h2>TO DO</h2>
+          <h1>NOTES</h1>
+           <ul class="text-box-container">
               <textarea name="" id="text-box" rows="5" cols="33"></textarea>
-            </ul>
-            <ul class="woth">
-              <h2>WOTH</h2>
-               <input type="text">
-               <input type="text">
-               <input type="text">
-               <input type="text">
-            </ul>
-            <ul class="foolish">
-              <h2 >FOOLISH</h2>
-               <input type="text">
-               <input type="text">
-               <input type="text">
-               <input type="text">
-            </ul>
-          </div>
-          
+           </ul>
+          <div class="woth">
+            <input id="input" type="text" >
+             <ul class="box-container">
+                <div  class="box"></div>
+                <div  class="box"></div>
+                <div  class="box"></div>
+                <div  class="box"></div>
+             </ul>
+           </div>
+           <div class="woth">
+            <input type="text">
+             <ul class="box-container">
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+             </ul>
+           </div>
+           <div class="woth">
+            <input type="text">
+             <ul class="box-container">
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+             </ul>
+           </div>
+           <div class="woth">
+            <input type="text">
+             <ul class="box-container">
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+             </ul>
+           </div>
+           <div class="foolish">
+            <input type="text">
+             <ul class="box-container">
+              <img class="item" src="imgs/hint-icons/boat-archery-icon.png" alt="Boat Archery ">
+              <div class="box"></div>
+              <img class="item" src="imgs/hint-icons/butler-icon.png" alt="Butler">
+              <div class="box"></div>
+             </ul>
+           </div>
+           <div class="foolish">
+            <input type="text">
+             <ul class="box-container">
+                <img class="item" src="imgs/hint-icons/gossip-stones-icon.png" alt="Gossip Stones">
+                <div class="box"></div>
+                <img class="item" src="imgs/hint-icons/goron-race.png" alt="Goron Race">
+                <div class="box"></div>
+             </ul>
+           </div>
+           <div class="foolish">
+            <input type="text">
+             <ul class="box-container">
+                <img class="item" src="imgs/hint-icons/seahorses-icon.png" alt="Seahorses">
+                <div class="box"></div>
+                <img class="item" src="imgs/hint-icons/fisherman.png" alt="Fisherman">
+                <div class="box"></div>
+             </ul>
+           </div>
+           <div class="foolish">
+            <input type="text">
+             <ul class="box-container">
+                <img class="item" src="imgs/hint-icons/romani-icon.png" alt="Romani">
+                <div class="box"></div>
+                <div class="box"></div>
+                <img class="item" src="imgs/hint-icons/place-holder.png" alt="">
+             </ul>
+           </div>
         </section>
       </div>
       <section class="tracker-container">
