added the hit-spot and crates&barrels sanity

--- a/mystery.html
+++ b/mystery.html
@@ -30,7 +30,7 @@
     </header>
     <main class="main-container">
       <div class="mystery-container">
-        <div class="sanity-bundle-container">
+        <div class="sanity-bundle-container1">
           <section id="scoop-sanity" class="scoop-sanity">
             <h2>SCOOP</h2>
             <div class="bottle-list">
@@ -283,7 +283,7 @@
                 <input type="text" />
               </div>
             </div>
-            <div class="Gorman-shop">
+            <div id="gorman-shop"  class="Gorman-shop">
               <h2>Gorman</h2>
               <div class="box-container">
                 <div id="box-container" class="box"></div>
@@ -412,8 +412,106 @@
               <input type="text">
              </div>
            </div>
-
         </section>
+        <div id="sanity-bundle-container2" class="sanity-bundle-container2">
+          <section id="hit-spot-sanity" class="hit-spot-sanity" >
+            <h1>HIT-SPOTS</h1>
+            <ul class="hit-spot-container">
+              <h2>Termina Field</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+              </div>
+            </ul>
+            <ul class="hit-spot-container">
+              <h2>PF Interiors</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+              </div>
+            </ul>
+            <ul class="hit-spot-container">
+              <h2>Ranch</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+              </div>
+            </ul>
+            <ul class="hit-spot-container">
+              <h2>Swamp</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+              </div>
+            </ul>
+            <ul class="hit-spot-container">
+              <h2>Great Bay Coast</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+              </div>
+            </ul>
+            <ul class="hit-spot-container">
+              <h2>Graveyard</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+              </div>
+            </ul>
+            <ul id="streched-container" class="hit-spot-container">
+              <h2>Termina Field</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+              </div>
+            </ul>
+          </section>
+          <section id="cratesBarrels-sanity" class="cratesBarrels-sanity">
+            <h1>CRATES & BARRELS</h1>
+            <ul class="cratesBarrels-container">
+              <h2>Clock Town</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+              </div>
+            </ul>
+            <ul class="cratesBarrels-container">
+              <h2>Ranch</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+              </div>
+            </ul>
+            <ul class="cratesBarrels-container">
+              <h2>PF Sewers</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+              </div>
+            </ul>
+            <ul class="cratesBarrels-container">
+              <h2>Stone Tower</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+              </div>
+            </ul>
+            <ul class="cratesBarrels-container">
+              <h2>GBT</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+              </div>
+            </ul>
+            <ul class="cratesBarrels-container">
+              <h2>SHT</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+              </div>
+            </ul>
+          </section>
+        </div>
       </div>
       <section class="tracker-container">
         <div class="item-container"> 
