updated the scoop sanity and added mundane sanity

--- a/mystery.html
+++ b/mystery.html
@@ -62,10 +62,20 @@
                 src="imgs/tracker-icons/scoops/princess.png"
                 alt="Deku Princess"
               />
-              <img class="item" src="imgs/tracker-icons/scoops/poe.png" alt="Poe" />
+              <img 
+                class="item" 
+                src="imgs/tracker-icons/scoops/poe.png" 
+                alt="Poe"
+              />
+              <img 
+              class="item" 
+              src="imgs/tracker-icons/scoops/big-poe.png" 
+              alt="Poe"
+            />
             </div>
             <div class="bottle-drop-container">
-              <div class="box"><img src="" alt=""></div>
+              <div class="box"></div>
+              <div class="box"></div>
               <div class="box"></div>
               <div class="box"></div>
               <div class="box"></div>
@@ -308,7 +318,7 @@
              </ul>
            </div>
            <div class="woth">
-            <input type="text">
+            <input id="input" type="text">
              <ul class="box-container">
                 <div class="box"></div>
                 <div class="box"></div>
@@ -507,6 +517,59 @@
             <ul class="cratesBarrels-container">
               <h2>SHT</h2>
               <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+              </div>
+            </ul>
+          </section>
+        </div>
+        <div id="sanity-bundle-container3" class="sanity-bundle-container3">
+          <section id="mundane-sanity"  class="mundane-sanity">
+            <h1>MUNDANE</h1>
+            <ul class="mundane-container">
+              <h2>Dampe</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+              </div>
+            </ul>
+            <ul class="mundane-container">
+              <h2>Fisherman</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+              </div>
+            </ul>
+            <ul class="mundane-container">
+              <h2>Kotake</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+              </div>
+            </ul>
+            <ul class="mundane-container">
+              <h2>Pictobox</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+              </div>
+            </ul>
+            <ul class="mundane-container">
+              <h2>Balcony Zora</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+              </div>
+            </ul>
+            <ul class="mundane-container">
+              <h2>Zora Jar Game</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+              </div>
+            </ul>
+            <ul id="streched-container" class="mundane-container">
+              <h2>Curiosity Shop</h2>
+              <div class="icon-container">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
+                <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
                 <img src="imgs/tracker-icons/masks/romani.png" alt="Crate">
               </div>
             </ul>
