added the fairy sanity

--- a/mystery.html
+++ b/mystery.html
@@ -874,6 +874,102 @@
            </div>
           </div>
         </section>
+        <section id="fairy-sanity" class="fairy-sanity">
+          <div class="fairy-titles">
+            <button id="woodfall-btn" ><img src="imgs/icons/woodfall-fairy.png" alt="Woodfall Fairy"></button>
+            <button id="snowhead-btn" ><img src="imgs/icons/snowhead-fairy.png" alt="Snowhead Fairy"></button>
+            <button id="greatbay-btn" ><img src="imgs/icons/greatbay-fairy.png" alt="Great Bay Fairy"></button>
+            <button id="stonetower-btn" ><img src="imgs/icons/stonetower-fairy.png" alt="Stone Tower Fairy"></button>
+          </div>
+          <div class="woodfall-wrapper">
+            <div class="woodfall-fairy-container">
+              <ol>
+                <h1>WOODFALL</h1>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+              </ol> 
+            </div>
+          </div>
+          <div class="snowhead-wrapper">
+            <div class="snowhead-fairy-container">
+              <ol>
+                <h1>SNOWHEAD</h1>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+              </ol> 
+            </div>
+          </div>
+          <div class="greatbay-wrapper">
+            <div class="greatbay-fairy-container">
+              <ol>
+                <h1>GREAT BAY</h1>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+              </ol> 
+            </div>
+          </div>
+          <div class="stonetower-wrapper">
+            <div class="stonetower-fairy-container">
+              <ol>
+                <h1>STONE TOWER</h1>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+              </ol> 
+            </div>
+          </div>
+        </section>
       </div>
       <section class="tracker-container">
         <div class="item-container"> 
